Fixe UI alignment

--- a/web/src/shared/components/Agent/SearchAgent/style.scss
+++ b/web/src/shared/components/Agent/SearchAgent/style.scss
@@ -11,7 +11,7 @@
         opacity: 0; // hide it
         height: 16px;
         width: 16px;
-        
+
         & + label {
         position: relative;
         cursor: pointer;
@@ -64,6 +64,21 @@
         min-height: 600px;
         @media (max-width: 992px) {
             min-height: inherit;
+        }
+        .list-option{
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            li{
+                border: none;
+                margin: 0;
+                color: #343434;
+                font-size: 16px;
+                padding: 7px 0;
+                label{
+                    color: #343434
+                }
+            }
         }
         h2{
             color: #343434;	
